@@ -107,7 +107,7 @@ esac
 dnl ------------------------------------------------------------------
 
 AC_ARG_ENABLE(debug,
-[  --enable-debug		  Enable debugging (default = no)],
+[  --enable-debug		Enable debugging (default = no)],
 include_debug=yes)
 AM_CONDITIONAL(INCLUDE_DEBUG, test x$include_debug = xyes)
 if test x$include_debug = xyes; then
@@ -352,6 +352,8 @@ fi
 
 dnl ------------------------------------------------------------------
 
+compile_pyecasound=yes
+
 dnl ---
 dnl Python header files
 dnl ---
@@ -379,8 +381,10 @@ AC_SUBST(eca_python_incdir)
 if test "X$eca_python_incdir" = "X"
 then
 	AC_MSG_WARN([Python.h not found])
+	compile_pyecasound=no
 else
 	AC_MSG_RESULT($eca_python_incdir)
+	compile_pyecasound=yes
 fi
 
 dnl ---
@@ -407,6 +411,13 @@ else
 fi
 AC_SUBST(eca_python_modules)
 AC_SUBST(eca_python_dlmodules)
+
+AC_ARG_ENABLE(pyecasound,
+[  --disable-pyecasound 	  Disable compilation of pyecasound (default = no)],
+[  compile_pyecasound=no ])
+
+dnl if test x$disable_pyecasound = xyes ; then compile_pyecasound=no ; fi
+AM_CONDITIONAL(COMPILE_PYECASOUND, test x$compile_pyecasound = xyes)
 
 dnl ------------------------------------------------------------------
 
@@ -447,10 +458,10 @@ echo "-----------------------------------------------------------------"
 echo "Following packages are now configured:"
 echo "ecasound: 		yes (ecasound,libecasound,libecasoundc)"
 echo "ecatools: 		yes"
-if test x$eca_python_incdir = x ; then
-	echo "pyecasound: 		no"
-else
+if test x$compile_pyecasound = xyes ; then
 	echo "pyecasound: 		yes"
+else
+	echo "pyecasound: 		no"
 fi
 echo "libkvutils: 		yes"
 echo "-----------------------------------------------------------------"
@@ -507,8 +518,10 @@ fi
 echo "-----------------------------------------------------------------"
 echo "Following directories are used:"
 echo "Directory prefix:		"$prefix
-echo "Python include dir:		"$eca_python_incdir
-echo "Python module dir:		"$eca_python_modules
+if test x$compile_pyecasound = xyes ; then
+	echo "Python include dir:		"$eca_python_incdir
+	echo "Python module dir:		"$eca_python_modules
+fi
 if test x$enable_sysreadline = xyes ; then
   	echo "readline includes:		"$readline_includes
 fi  
