@@ -85,6 +85,11 @@ stretched_tape = -ei:100 -kos:1,93,100,.5,0 -kx -kos:4,.1,1,.1
 molten_tape = -ei:100 -kos:1,85,105,.5,0 -kx -kos:4,.1,2,.1
 dali = -ei:100 -kos:1,85,105,.5,0 -kx -kos:4,.1,2,.1 \
         -etd:100,1,0,70 -epp:0 -kos:1,20,80,.5,0 -kx -kos:4,.1,2,.1
+# 
+# ======
+# Presets using LADSPA plugins
+# hermesFilter
+hermes = -eli:1200,3,%1,0.27,%2,100,%3,40,%4,1.5,1,2,-4,-4,-50,-20,-20,-20,200,1000,3,1,3,5,1500,0.65,0,130,0,5,400,0.8,0,0,-177,1,150,0.9,0.97,30,30,0.025,0.9,0.5,0.05,0.7,0.5,0.1,0.5,0.5,0,-20,-20
 # ======
 # Other
 #
